# WPL

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
backends/linux_x11/: wpl_linux_x11_backend.c  wpl_linux_x11_font.c  wpl_linux_x11_font.h  wpl_linux_x11_input.c  wpl_linux_x11_internal.h  wpl_linux_x11_renderer.c  wpl_linux_x11_window.c
docs/: api_review.md  canvas_math_contract.md  debug_overlay_contract.md  draw_command_contract.md  examples.md  file_io.md  file_io_contract.md  final_readiness_checklist.md  input_model.md  input_snapshot_contract.md  lifecycle_threading.md  linux_backend_interface.md  linux_only_upgrade_implementation_plan.md  linux_x11_backend.md  release_checklist.md  release_notes_v0.1.md  release_process.md  replay_contract.md  replay_format.md  roadmap.md  software_renderer.md  software_renderer_contract.md  text_input_boundary.md  timing_frame_contract.md  validation.md  validation_report_v0.1.md  wpl_feature_requests.md
examples/00_empty_window/: CMakeLists.txt  main.c
examples/01_input_snapshot/: CMakeLists.txt  main.c
examples/02_draw_primitives/: CMakeLists.txt  main.c
examples/03_canvas_pan_zoom/: CMakeLists.txt  main.c
examples/04_debug_overlay/: CMakeLists.txt  main.c
examples/05_input_replay/: CMakeLists.txt  main.c
include/wpl/: wpl.h  wpl_base.h  wpl_canvas.h  wpl_debug.h  wpl_draw.h  wpl_file.h  wpl_input.h  wpl_log.h  wpl_replay.h  wpl_result.h  wpl_time.h  wpl_window.h
scripts/: build.sh  build_sanitize.sh  check_no_backend_leaks.sh  check_no_frame_pacing_api.sh  check_public_headers.sh  manual_graphical_smoke.sh  test.sh  xvfb_smoke.sh
src/: wpl_backend_internal.h  wpl_base.c  wpl_canvas.c  wpl_debug.c  wpl_draw.c  wpl_draw_internal.h  wpl_file.c  wpl_log.c  wpl_replay.c  wpl_replay_internal.h  wpl_text_internal.h  wpl_time.c
tests/: test_backend_dispatch.c  test_backend_interface.c  test_canvas.c  test_debug_overlay.c  test_draw_derived_geometry.c  test_draw_list.c  test_draw_list_edges.c  test_draw_submit_lifetime.c  test_file_io.c  test_file_io_edges.c  test_input_state.c  test_input_window_isolation.c  test_log.c  test_public_headers.c  test_public_headers_cpp.cpp  test_renderer_pixels.c  test_renderer_targets.c  test_replay.c  test_replay_edges.c  test_replay_format.c  test_text_metrics.c  test_time.c  test_window_api.c
